<resources>
    <string name="app_name">DateYourEve</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="todo">TODO</string>
    <string name="_91">+91</string>
    <string name="_8209062638">8209062638</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="date_your_eve">Date Your Eve</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="_123456">123456</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="please_fill_in_the_form_to_continue">Please Fill in the form to continue.</string>
    <string name="sms_quota_exceeded">SMS Quota has been exceeded!</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="create_event">Create</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">Search_Button</string>
    <string name="free_food">Free Food</string>
    <string name="in_this_event_we_will_get_free_food">In this Event We Will Get Free Food</string>
    <string name="time">Time</string>
    <string name="fee">Fee</string>
    <string name="search_here">Search Here</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="six_digit_otp">Six Digit OTP</string>
    <string name="format">yyyy-MM-dd HH:mm:ss</string>
</resources>