<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateProfile">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_image"
        android:id="@+id/create_profile_image"
        android:onClick="ChooseImage"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@android:color/black"
        android:inputType="textPersonName"
        android:layout_margin="10dp"
        android:id="@+id/et_name"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:layout_margin="10dp"
        android:id="@+id/et_gender"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:layout_margin="10dp"
        android:id="@+id/et_bio"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:layout_margin="10dp"
        android:id="@+id/et_location"
        android:backgroundTint="@color/colorPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:id="@+id/save_btn"
        android:onClick="SaveProfile"
        android:layout_margin="10dp"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:id="@+id/progress_bar"/>


</LinearLayout>