<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/free_food"
        android:textColor="#594E4E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/heading"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/in_this_event_we_will_get_free_food"
        android:textColor="#594E4E"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/description"
        android:layout_marginTop="40dp"
        android:layout_marginStart="130dp"
        android:text="@string/time"
        android:textColor="#594E4E"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/description"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/starttime"
        android:text="@string/fee"
        android:textColor="#594E4E"
        android:textSize="16sp"
        android:textStyle="bold" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>