<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="282dp"
                android:layout_height="168dp"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/login_screen_image" />

            <TextView
                android:id="@+id/date_your_eve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/verify_your_number"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                tools:text="Verify Your Number" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/country_code"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/todo"
                    android:layout_marginHorizontal="30dp"
                    android:ems="10"
                    android:hint="@string/_91"
                    android:inputType="phone"
                    android:textAlignment="center"
                    android:textColor="#673AB7"
                    android:textColorHint="#3C000000"
                    />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/todo"
                    android:ems="10"
                    android:hint="@string/_8209062638"
                    android:inputType="phone"
                    android:textAlignment="center"
                    android:textColor="#673AB7"
                    android:textColorHint="#3C000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:shadowColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:text="@string/generate_otp"
                android:layout_gravity="center"
                android:textSize="18sp"
                tools:text="@string/generate_otp" />

            <TextView
                android:id="@+id/login_form_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Waiting..."
                android:textColor="#D84C4C"
                android:visibility="invisible"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>