<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AuthActivities.OTPVerification">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="241dp"
                android:layout_height="176dp"
                android:contentDescription="@string/todo"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                app:srcCompat="@drawable/otp_screen_image" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/enter_otp"
                android:textColor="#3F51B5"
                android:textSize="30sp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/login_otp"
                android:layout_width="194dp"
                android:layout_height="53dp"
                android:layout_marginTop="28dp"
                android:autofillHints="@string/todo"
                android:ems="10"
                android:hint="@string/six_digit_otp"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHint="#3C000000"
                android:textSize="24sp"
                android:layout_margin="15dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/otp_verification_button"
                android:layout_width="173dp"
                android:layout_height="67dp"
                android:text="@string/submit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:layout_margin="20dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/otp_form_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Working..."
                android:textColor="#F11B1B"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>